# chrono-hypernova

./: Cargo.toml  DEPLOYMENT.md  PROGRESS.md  README.md  agents.md
src/: main.rs
src/actors/: binance_ingest.rs  market_discovery.rs  mod.rs  polymarket_book.rs
src/engine/: black_scholes.rs  dashboard.rs  mod.rs  orderbook.rs  parser.rs  pricing.rs  volatility.rs
src/execution/: client.rs  mod.rs  order_manager.rs  signing.rs
src/strategy/: engine.rs
src/types/: mod.rs
src/utils/: mod.rs  ws_retry.rs
src/web/: server.rs
templates/: dashboard.html
