[package]
name = "polyarb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Networking & Web
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# Performance Serialization
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Blockchain & Signing
alloy = { version = "0.1.4", features = ["full"] }

# Math & Financials
statrs = "0.16"
ordered-float = "4.2"

# Intelligence & Parsing
regex = "1.10"
lazy_static = "1.4"
hex = "0.4"

# TUI & Monitoring
ratatui = "0.26"
crossterm = "0.27"

# Rate Limiting
governor = "0.6"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
dashmap = "5.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
